# LER2025-scouting

./: .gitignore  AndroidManifest.xml.template  Cargo.toml  Makefile  README.md  lerscouring.apk.idsig  main.c  output.map  thisappwillcauseirreperabledamagetoyourphone.apk.idsig
src/: #cencode.rs#  android.rs  cencode.rs  cligen.rs  main.rs  parse.rs  parse.rs~
