[package]
name = "rs-stest"
version = "0.1.0"

[dependencies]
android_logger = "0.14.1"
crossterm = "0.28.1"
eframe = {version = "0.31.0", features = ["default", "android-native-activity"]}
egui_extras = "0.31.0"
log = "0.4.25"
ratatui = "0.29.0"
winit = "0.30.9"

[lib]
name = "android"
crate-type = ["cdylib"]
path = "src/android.rs"

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[[bin]]
name = "cligen"
path = "src/cligen.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"
